syntax = "proto3";

option go_package = "github.com/NikhilSharmaWe/marketplace/proto";

service MarketplaceService {
  // Shop-related methods
  rpc CreateShop(CreateShopRequest) returns (Shop);
  rpc GetShopByID(GetRequest) returns (Shop);
  rpc GetShopsByServiceableProducts(GetShopsByServiceableProductsRequest) returns (Shops);
  rpc GetShopForUser(GetShopForUserRequest) returns (Shops);


  // Product-related methods
  rpc CreateProduct(CreateProductRequest) returns (Product);
  rpc GetProductByID(GetRequest) returns (Product);

  // Inventory-related methods
  rpc UpdateInventory(UpdateInventoryRequest) returns (Inventory);
  rpc GetInventory(GetInventoryRequest) returns (Inventory);
  
  // Serviceable products methods
  rpc AddServiceableProduct(AddServiceableProductRequest) returns (Shop);
  rpc GetServiceableProducts(GetServiceableProductsRequest) returns (Products);

  // User-related methods
  rpc CreateUser(CreateUserRequest) returns (User);
  rpc GetUserByID(GetRequest) returns (User);

  // Neighbour-related methods
  rpc GetNearestNeighbour(GetNearestNeighbourRequest) returns (User);
}

message CreateShopRequest {
  string name = 1;
  string location = 2;
  string operationhours = 3;
  repeated Product serviceableProduct = 4;
  Coordinates coordinates = 5;
}

message CreateProductRequest {
	string name = 1;
	string description = 2;
	float price = 3;
}

message CreateUserRequest {
	string name = 1;
	string location = 2;
	Coordinates coordinates = 3;
}
  
message CreateResponse {
	bool created = 1;
}

message GetRequest {
	string id = 1;
}
  
message Shop {
  string id = 1;
  string name = 2;
  string location = 3;
  string operationhours = 4;
  repeated Product serviceableProducts = 5;
  Coordinates coordinates = 6;
}

message Shops {
	repeated Shop shops = 1;
}

message Product {
  // Product fields
  string id = 1;
  string name = 2;
  string description = 3;
  float price = 4;
}

message Products {
	repeated Product products = 1;
}

message Inventory {
  // Inventory fields
  string id = 1;
  string shopId = 2;
  string productId = 3;
  int32 quantity = 4;
}

message UpdateInventoryRequest {
	string shopId = 1;
	string productId = 2;
	int32 change = 3;
	bool add = 4;
}

message GetInventoryRequest {
	string shopId = 1;
	string productId = 2;
}

message ServiceableProduct {
  // Serviceable product fields
  string id = 1;
  string productId = 2;
  string shopId = 3;
}

message User {
  // User fields
  string id = 1;
  string name = 2;
  string location = 3;
  Coordinates coordinates = 6;
}

message AddServiceableProductRequest {
	string shopId = 1;
	string productId = 2;
}

message GetServiceableProductsRequest {
	string shopId = 1;
}

message GetShopsByServiceableProductsRequest {
	string productId = 1;
}

message Coordinates {
    double latitude = 1;
    double longitude = 2;
}

message GetShopForUserRequest {
	string userId = 1;
	double maxDistanceInKM = 2;
	string productId = 3;
}

message GetNearestNeighbourRequest{
	string userId = 1;
}
